--- a/eclipse.project
+++ b/eclipse.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PX4-Firmware</name>
+	<name>THU9-314</name>
 	<comment></comment>
 	<projects>
 	</projects>
